Add DateOf* CSV datasets and enhance date handling in tests
- Introduced new CSV files for various date formats: DateOfUTCDate, DateOfUTCZDate, DateOfUTCFracZDate.
- Implemented comprehensive tests for date handling across different time zones and formats.
- Added equivalence checks to ensure non-date columns are consistent across datasets.
- Developed identity roundtrip tests to verify date alignment and equality across multiple indicators.
- Enhanced date parsing functionality to support a wider range of date formats, including RFC1123 and IANA time zones.
- Updated Quote class tests to ensure proper handling of system local time zones.

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,10 @@ dmypy.json
 # Benchmarks
 .benchmarks
 benchmark_data.json
+bench_*.json
+
+# Test results (non-benchmark)
+test-results/
 
 # OS generated files
 .DS_Store
