--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,7 @@
 markers =
     localization: tests for non-English locales environments
     performance: tests for performance benchmarks
+    perf_focus: focused performance subset for rapid iteration
 
 # Default: allows `pytest` to run all tests
 # except those marked as `localization` or `performance`
