--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,181 +1,209 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "Build",
-      "type": "shell",
-      "command": "pip install -r requirements.txt && pip install -r requirements-test.txt",
-      "group": "build",
-      "problemMatcher": []
-    },
-    {
-      "label": "Test: All",
-      "dependsOrder": "parallel",
-      "dependsOn": [
-        "Test: Unit (default)",
-        "Test: Coverage",
-        "Test: Performance",
-        "Test: Localization"
-      ],
-      "group": "test",
-      "problemMatcher": []
-    },
-    {
-      "label": "Test: Unit (default)",
-      "type": "shell",
-      "command": "pytest -vr A",
-      "group": "test",
-      "problemMatcher": []
-    },
-    {
-      "label": "Test: Coverage",
-      "type": "shell",
-      "command": "pytest --cov=stock_indicators --cov-report=term-missing",
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Test: Performance",
-      "type": "shell",
-      "command": "pytest -m performance",
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Test: Localization",
-      "type": "shell",
-      "command": "pytest -m localization -vr A",
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Install: Ruby Packages (docs)",
-      "type": "shell",
-      "command": "bundle install --jobs 4 && bundle clean --force",
-      "options": {
-        "cwd": "${workspaceFolder}/docs",
-        "env": {
-          "BUNDLE_GEMFILE": "${workspaceFolder}/docs/Gemfile",
-          "BUNDLE_PATH": "${workspaceFolder}/docs/vendor/bundle"
-        }
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Install: Python Packages",
-      "type": "shell",
-      "command": "pip install -r requirements.txt && pip install -r requirements-test.txt",
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Update: Python Packages",
-      "type": "shell",
-      "command": "pip install -U -r requirements.txt && pip install -U -r requirements-test.txt",
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Update: Ruby Packages (docs)",
-      "type": "shell",
-      "command": "bundle update --conservative && bundle clean --force",
-      "options": {
-        "cwd": "${workspaceFolder}/docs",
-        "env": {
-          "BUNDLE_GEMFILE": "${workspaceFolder}/docs/Gemfile",
-          "BUNDLE_PATH": "${workspaceFolder}/docs/vendor/bundle"
-        }
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Update: All Packages",
-      "dependsOrder": "sequence",
-      "dependsOn": [
-        "Update: Python Packages",
-        "Update: Ruby Packages (docs)"
-      ],
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Run: Doc Site with LiveReload",
-      "type": "shell",
-      "command": "bundle exec jekyll serve --livereload --open-url",
-      "dependsOn": "Install: Ruby Packages (docs)",
-      "dependsOrder": "sequence",
-      "isBackground": true,
-      "options": {
-        "cwd": "${workspaceFolder}/docs",
-        "env": {
-          "BUNDLE_GEMFILE": "${workspaceFolder}/docs/Gemfile",
-          "BUNDLE_PATH": "${workspaceFolder}/docs/vendor/bundle"
-        }
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Benchmark: JSON (prompt filename)",
-      "type": "shell",
-      "command": "pytest -m performance --benchmark-json=${input:benchJsonOut}",
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Benchmark: Autosave to .benchmarks",
-      "type": "shell",
-      "command": "pytest -m performance --benchmark-autosave --benchmark-save-data",
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Benchmark: List Saved Runs",
-      "type": "shell",
-      "command": "pytest-benchmark list",
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "group": "none",
-      "problemMatcher": []
-    },
-    {
-      "label": "Benchmark: Compare Saved Runs",
-      "type": "shell",
-      "command": "pytest-benchmark compare ${input:benchBase} ${input:benchTarget}",
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "group": "none",
-      "problemMatcher": []
-    }
-  ],
-  "inputs": [
-    {
-      "id": "benchJsonOut",
-      "type": "promptString",
-      "description": "Output JSON filename (e.g., bench_current.json)",
-      "default": "bench_current.json"
-    },
-    {
-      "id": "benchBase",
-      "type": "promptString",
-      "description": "Base saved run name (from 'Benchmark: List Saved Runs')",
-      "default": ""
-    },
-    {
-      "id": "benchTarget",
-      "type": "promptString",
-      "description": "Target saved run name (from 'Benchmark: List Saved Runs')",
-      "default": ""
-    }
-  ]
+	"version": "2.0.0",
+	"tasks": [
+		{
+			"label": "Build",
+			"type": "shell",
+			"command": "pip install -r requirements.txt && pip install -r requirements-test.txt",
+			"group": "build",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test: All",
+			"dependsOrder": "parallel",
+			"dependsOn": [
+				"Test: Unit (default)",
+				"Test: Coverage",
+				"Test: Performance",
+				"Test: Localization"
+			],
+			"group": "test",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test: Unit (default)",
+			"type": "shell",
+			"command": "pytest -vr A",
+			"group": "test",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test: Coverage",
+			"type": "shell",
+			"command": "pytest --cov=stock_indicators --cov-report=term-missing",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test: Performance",
+			"type": "shell",
+			"command": "pytest -m performance",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test: Performance (focus)",
+			"type": "shell",
+			"command": "pytest -m \"performance and perf_focus\"",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Test: Localization",
+			"type": "shell",
+			"command": "pytest -m localization -vr A",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Install: Ruby Packages (docs)",
+			"type": "shell",
+			"command": "bundle install --jobs 4 && bundle clean --force",
+			"options": {
+				"cwd": "${workspaceFolder}/docs",
+				"env": {
+					"BUNDLE_GEMFILE": "${workspaceFolder}/docs/Gemfile",
+					"BUNDLE_PATH": "${workspaceFolder}/docs/vendor/bundle"
+				}
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Install: Python Packages",
+			"type": "shell",
+			"command": "pip install -r requirements.txt && pip install -r requirements-test.txt",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Update: Python Packages",
+			"type": "shell",
+			"command": "pip install -U -r requirements.txt && pip install -U -r requirements-test.txt",
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Update: Ruby Packages (docs)",
+			"type": "shell",
+			"command": "bundle update --conservative && bundle clean --force",
+			"options": {
+				"cwd": "${workspaceFolder}/docs",
+				"env": {
+					"BUNDLE_GEMFILE": "${workspaceFolder}/docs/Gemfile",
+					"BUNDLE_PATH": "${workspaceFolder}/docs/vendor/bundle"
+				}
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Update: All Packages",
+			"dependsOrder": "sequence",
+			"dependsOn": [
+				"Update: Python Packages",
+				"Update: Ruby Packages (docs)"
+			],
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Run: Doc Site with LiveReload",
+			"type": "shell",
+			"command": "bundle exec jekyll serve --livereload --open-url",
+			"dependsOn": "Install: Ruby Packages (docs)",
+			"dependsOrder": "sequence",
+			"isBackground": true,
+			"options": {
+				"cwd": "${workspaceFolder}/docs",
+				"env": {
+					"BUNDLE_GEMFILE": "${workspaceFolder}/docs/Gemfile",
+					"BUNDLE_PATH": "${workspaceFolder}/docs/vendor/bundle"
+				}
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Benchmark: JSON (prompt filename)",
+			"type": "shell",
+			"command": "pytest -m performance --benchmark-json=.benchmarks/${input:benchJsonOut}",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Benchmark: Focus JSON (prompt filename)",
+			"type": "shell",
+			"command": "pytest -m \"performance and perf_focus\" --benchmark-json=.benchmarks/${input:benchJsonOut}",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Benchmark: Autosave to .benchmarks",
+			"type": "shell",
+			"command": "pytest -m performance --benchmark-autosave --benchmark-save-data",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Benchmark: Focus Autosave to .benchmarks",
+			"type": "shell",
+			"command": "pytest -m \"performance and perf_focus\" --benchmark-autosave --benchmark-save-data",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Benchmark: List Saved Runs",
+			"type": "shell",
+			"command": "pytest-benchmark list",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+		{
+			"label": "Benchmark: Compare Saved Runs",
+			"type": "shell",
+			"command": "pytest-benchmark compare ${input:benchBase} ${input:benchTarget}",
+			"options": {
+				"cwd": "${workspaceFolder}"
+			},
+			"group": "none",
+			"problemMatcher": []
+		},
+
+	],
+	"inputs": [
+		{
+			"id": "benchJsonOut",
+			"type": "promptString",
+			"description": "Output JSON filename (e.g., bench_current.json)",
+			"default": "bench_current.json"
+		},
+		{
+			"id": "benchBase",
+			"type": "promptString",
+			"description": "Base saved run name (from 'Benchmark: List Saved Runs')",
+			"default": ""
+		},
+		{
+			"id": "benchTarget",
+			"type": "promptString",
+			"description": "Target saved run name (from 'Benchmark: List Saved Runs')",
+			"default": ""
+		}
+	]
 }
